@@ -1,147 +1,191 @@
 package com.resumeforge.ai.service;
 
-import com.resumeforge.ai.dto.*;
-import com.resumeforge.ai.entity.*;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.resumeforge.ai.dto.ResumeRequest;
+import com.resumeforge.ai.dto.ResumeResponse;
+import com.resumeforge.ai.dto.SnapshotResponse;
+import com.resumeforge.ai.entity.Resume;
+import com.resumeforge.ai.entity.ResumeSnapshot;
+import com.resumeforge.ai.entity.User;
 import com.resumeforge.ai.exception.ResourceNotFoundException;
+import com.resumeforge.ai.exception.UnauthorizedException;
 import com.resumeforge.ai.repository.ResumeRepository;
-import com.resumeforge.ai.util.JsonUtil;
+import com.resumeforge.ai.repository.ResumeSnapshotRepository;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class ResumeService {
-    private final ResumeRepository resumeRepository;
-    private final JsonUtil jsonUtil;
-    private final ReferralService referralService;
 
-    public ResumeService(ResumeRepository resumeRepository,
-                         JsonUtil jsonUtil,
-                         ReferralService referralService) {
-        this.resumeRepository = resumeRepository;
-        this.jsonUtil         = jsonUtil;
-        this.referralService  = referralService;
+    @Autowired
+    private ResumeRepository resumeRepository;
+
+    @Autowired
+    private ResumeSnapshotRepository snapshotRepository;
+
+    private final ObjectMapper objectMapper = new ObjectMapper();
+
+    @Transactional
+    public ResumeResponse createResume(User user, ResumeRequest request) {
+        Resume resume = Resume.builder()
+                .userId(user.getId())
+                .title(request.getTitle())
+                .template(request.getTemplate() != null ? request.getTemplate() : "modern")
+                .personalInfo(request.getPersonalInfo())
+                .summary(request.getSummary())
+                .experience(request.getExperience())
+                .education(request.getEducation())
+                .skills(request.getSkills())
+                .projects(request.getProjects())
+                .certifications(request.getCertifications())
+                .customSections(request.getCustomSections())
+                .build();
+
+        resume = resumeRepository.save(resume);
+        createSnapshot(resume);
+        return toResponse(resume);
     }
 
-    @Transactional(readOnly = true)
-    public List<ResumeDto> getAll(User user) {
-        return resumeRepository.findByUserOrderByUpdatedAtDesc(user)
-                .stream().map(this::toDto).toList();
+    public List<ResumeResponse> getAllResumes(User user) {
+        return resumeRepository.findByUserIdOrderByUpdatedAtDesc(user.getId())
+                .stream()
+                .map(this::toResponse)
+                .collect(Collectors.toList());
     }
 
-    @Transactional(readOnly = true)
-    public ResumeDto getById(Long id, User user) {
-        Resume resume = resumeRepository.findByIdAndUser(id, user)
+    public ResumeResponse getResume(User user, Long id) {
+        Resume resume = resumeRepository.findByIdAndUserId(id, user.getId())
                 .orElseThrow(() -> new ResourceNotFoundException("Resume not found"));
-        return toDto(resume);
+        return toResponse(resume);
     }
 
     @Transactional
-    public ResumeDto create(User user, ResumeDto dto) {
-        boolean isFirstResume = resumeRepository.countByUser(user) == 0;
+    public ResumeResponse updateResume(User user, Long id, ResumeRequest request) {
+        Resume resume = resumeRepository.findByIdAndUserId(id, user.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Resume not found"));
 
-        Resume resume = new Resume();
-        resume.setUser(user);
-        apply(resume, dto);
-        ResumeDto saved = toDto(resumeRepository.save(resume));
-
-        // ── Referral qualification hook ───────────────────────────────
-        // Fires only on first resume creation. Silently swallowed if it
-        // fails so it never breaks the resume creation response.
-        if (isFirstResume) {
-            try {
-                referralService.checkAndQualifyReferral(user);
-            } catch (Exception e) {
-                // Log but don't fail the resume create operation
-            }
+        resume.setTitle(request.getTitle());
+        if (request.getTemplate() != null) {
+            resume.setTemplate(request.getTemplate());
         }
+        resume.setPersonalInfo(request.getPersonalInfo());
+        resume.setSummary(request.getSummary());
+        resume.setExperience(request.getExperience());
+        resume.setEducation(request.getEducation());
+        resume.setSkills(request.getSkills());
+        resume.setProjects(request.getProjects());
+        resume.setCertifications(request.getCertifications());
+        resume.setCustomSections(request.getCustomSections());
 
-        return saved;
+        resume = resumeRepository.save(resume);
+        createSnapshot(resume);
+        return toResponse(resume);
     }
 
     @Transactional
-    public ResumeDto update(Long id, User user, ResumeDto dto) {
-        Resume resume = resumeRepository.findByIdAndUser(id, user)
-                .orElseThrow(() -> new ResourceNotFoundException("Resume not found"));
-        apply(resume, dto);
-        return toDto(resumeRepository.save(resume));
-    }
-
-    @Transactional
-    public void delete(Long id, User user) {
-        Resume resume = resumeRepository.findByIdAndUser(id, user)
+    public void deleteResume(User user, Long id) {
+        Resume resume = resumeRepository.findByIdAndUserId(id, user.getId())
                 .orElseThrow(() -> new ResourceNotFoundException("Resume not found"));
         resumeRepository.delete(resume);
     }
 
-    private void apply(Resume resume, ResumeDto dto) {
-        resume.setFullName(dto.fullName());
-        resume.setRole(dto.role());
-        resume.setEmail(dto.email());
-        resume.setPhone(dto.phone());
-        resume.setLocation(dto.location());
-        resume.setLinkedin(dto.linkedin());
-        resume.setGithub(dto.github());
-        resume.setPortfolio(dto.portfolio());
-        resume.setSummary(dto.summary());
-        resume.setSkillsJson(jsonUtil.toJson(dto.skills()));
-        resume.setCertificationsJson(jsonUtil.toJson(dto.certifications()));
-        resume.setAchievementsJson(jsonUtil.toJson(dto.achievements()));
+    public List<SnapshotResponse> getResumeHistory(User user, Long resumeId) {
+        Resume resume = resumeRepository.findByIdAndUserId(resumeId, user.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Resume not found"));
 
-        resume.getExperiences().clear();
-        if (dto.experiences() != null) {
-            for (ExperienceDto ed : dto.experiences()) {
-                resume.getExperiences().add(Experience.builder()
-                        .resume(resume).company(ed.company()).role(ed.role())
-                        .location(ed.location()).startDate(ed.startDate()).endDate(ed.endDate())
-                        .bulletsJson(jsonUtil.toJson(ed.bullets())).build());
-            }
-        }
+        return snapshotRepository.findByResumeIdOrderByCreatedAtDesc(resumeId)
+                .stream()
+                .map(this::toSnapshotResponse)
+                .collect(Collectors.toList());
+    }
 
-        resume.getEducationEntries().clear();
-        if (dto.education() != null) {
-            for (EducationDto ed : dto.education()) {
-                resume.getEducationEntries().add(Education.builder()
-                        .resume(resume).institution(ed.institution()).degree(ed.degree())
-                        .field(ed.field()).startDate(ed.startDate()).endDate(ed.endDate()).build());
-            }
-        }
+    @Transactional
+    public ResumeResponse restoreSnapshot(User user, Long resumeId, Long snapshotId) {
+        Resume resume = resumeRepository.findByIdAndUserId(resumeId, user.getId())
+                .orElseThrow(() -> new ResourceNotFoundException("Resume not found"));
 
-        resume.getProjects().clear();
-        if (dto.projects() != null) {
-            for (ProjectDto pd : dto.projects()) {
-                resume.getProjects().add(Project.builder()
-                        .resume(resume).name(pd.name()).link(pd.link())
-                        .description(pd.description()).build());
-            }
+        ResumeSnapshot snapshot = snapshotRepository.findByIdAndResumeId(snapshotId, resumeId)
+                .orElseThrow(() -> new ResourceNotFoundException("Snapshot not found"));
+
+        try {
+            ResumeRequest snapshotData = objectMapper.readValue(snapshot.getSnapshotData(), ResumeRequest.class);
+            
+            resume.setTitle(snapshotData.getTitle());
+            resume.setTemplate(snapshotData.getTemplate());
+            resume.setPersonalInfo(snapshotData.getPersonalInfo());
+            resume.setSummary(snapshotData.getSummary());
+            resume.setExperience(snapshotData.getExperience());
+            resume.setEducation(snapshotData.getEducation());
+            resume.setSkills(snapshotData.getSkills());
+            resume.setProjects(snapshotData.getProjects());
+            resume.setCertifications(snapshotData.getCertifications());
+            resume.setCustomSections(snapshotData.getCustomSections());
+
+            resume = resumeRepository.save(resume);
+            createSnapshot(resume);
+            return toResponse(resume);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to restore snapshot");
         }
     }
 
-    private ResumeDto toDto(Resume resume) {
-        List<ExperienceDto> experiences = new ArrayList<>();
-        for (Experience e : resume.getExperiences()) {
-            experiences.add(new ExperienceDto(e.getId(), e.getCompany(), e.getRole(),
-                    e.getLocation(), e.getStartDate(), e.getEndDate(),
-                    jsonUtil.toStringList(e.getBulletsJson())));
+    private void createSnapshot(Resume resume) {
+        try {
+            ResumeRequest snapshotData = new ResumeRequest();
+            snapshotData.setTitle(resume.getTitle());
+            snapshotData.setTemplate(resume.getTemplate());
+            snapshotData.setPersonalInfo(resume.getPersonalInfo());
+            snapshotData.setSummary(resume.getSummary());
+            snapshotData.setExperience(resume.getExperience());
+            snapshotData.setEducation(resume.getEducation());
+            snapshotData.setSkills(resume.getSkills());
+            snapshotData.setProjects(resume.getProjects());
+            snapshotData.setCertifications(resume.getCertifications());
+            snapshotData.setCustomSections(resume.getCustomSections());
+
+            String jsonData = objectMapper.writeValueAsString(snapshotData);
+
+            ResumeSnapshot snapshot = ResumeSnapshot.builder()
+                    .resumeId(resume.getId())
+                    .snapshotData(jsonData)
+                    .build();
+
+            snapshotRepository.save(snapshot);
+        } catch (Exception e) {
+            // Log error but don't fail the main operation
+            System.err.println("Failed to create snapshot: " + e.getMessage());
         }
-        List<EducationDto> education = new ArrayList<>();
-        for (Education e : resume.getEducationEntries()) {
-            education.add(new EducationDto(e.getId(), e.getInstitution(), e.getDegree(),
-                    e.getField(), e.getStartDate(), e.getEndDate()));
-        }
-        List<ProjectDto> projects = new ArrayList<>();
-        for (Project p : resume.getProjects()) {
-            projects.add(new ProjectDto(p.getId(), p.getName(), p.getLink(), p.getDescription()));
-        }
-        return new ResumeDto(resume.getId(), resume.getFullName(), resume.getRole(),
-                resume.getEmail(), resume.getPhone(), resume.getLocation(),
-                resume.getLinkedin(), resume.getGithub(), resume.getPortfolio(),
-                resume.getSummary(), jsonUtil.toStringList(resume.getSkillsJson()),
-                experiences, education, projects,
-                jsonUtil.toStringList(resume.getCertificationsJson()),
-                jsonUtil.toStringList(resume.getAchievementsJson()),
-                resume.getCreatedAt(), resume.getUpdatedAt());
+    }
+
+    private ResumeResponse toResponse(Resume resume) {
+        return ResumeResponse.builder()
+                .id(resume.getId())
+                .userId(resume.getUserId())
+                .title(resume.getTitle())
+                .template(resume.getTemplate())
+                .personalInfo(resume.getPersonalInfo())
+                .summary(resume.getSummary())
+                .experience(resume.getExperience())
+                .education(resume.getEducation())
+                .skills(resume.getSkills())
+                .projects(resume.getProjects())
+                .certifications(resume.getCertifications())
+                .customSections(resume.getCustomSections())
+                .createdAt(resume.getCreatedAt())
+                .updatedAt(resume.getUpdatedAt())
+                .build();
+    }
+
+    private SnapshotResponse toSnapshotResponse(ResumeSnapshot snapshot) {
+        return SnapshotResponse.builder()
+                .id(snapshot.getId())
+                .resumeId(snapshot.getResumeId())
+                .snapshotData(snapshot.getSnapshotData())
+                .createdAt(snapshot.getCreatedAt())
+                .build();
     }
 }
